--- a/StareMedic/Views/Doctores.xaml
+++ b/StareMedic/Views/Doctores.xaml
@@ -3,10 +3,27 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="StareMedic.Views.Doctores"
              Title="Doctores">
-    <Grid ColumnDefinitions="2*,*">
+
+    <Shell.BackButtonBehavior>
+        <BackButtonBehavior IsEnabled="False" IsVisible="False" />
+    </Shell.BackButtonBehavior>
+
+    <ContentPage.Resources>
+        <Color x:Key="Principal">#FFFBF5</Color>
+        <Color x:Key="Secundario">#F7EFE5</Color>
+        <Color x:Key="Alter1">#C3ACD0</Color>
+        <Color x:Key="Alter2">#7743DB</Color>
+        <Color x:Key="Black">#000</Color>
+    </ContentPage.Resources>
+    
+    <Grid 
+        ColumnDefinitions="2*,*"
+        BackgroundColor="{StaticResource Secundario}">
+
         <ListView
             Grid.Column="0"
             x:Name="listMedics"
+            BackgroundColor="{StaticResource Alter1}"
             Style="{StaticResource listviewShowEntity}"
             ItemSelected="listMedics_ItemSelected"
             ItemTapped="listMedics_ItemTapped"
@@ -14,37 +31,142 @@
             MinimumWidthRequest="600">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell Text="{Binding Nombre}"
-                              Detail="{Binding Path=Id}"
-                              TextColor="AliceBlue"/>
+                    <ViewCell>
+                        <StackLayout 
+                            Orientation="Horizontal">
+
+                            <Grid 
+                                Padding="20">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+
+                                <Label 
+                                    Grid.Column="0"
+                                    Text="{Binding Path=Id, StringFormat='ID: {0} '}"
+                                    FontFamily="OpenSansRegular"
+                                    TextColor="{StaticResource Black}"
+                                    FontSize="15"
+                                    HorizontalOptions="StartAndExpand"
+                                    HorizontalTextAlignment="Start"/>
+
+                                <Label 
+                                    Grid.Column="1"
+                                    Text=" --  "
+                                    FontFamily="OpenSansRegular"
+                                    FontSize="15"
+                                    TextColor="{StaticResource Black}"
+                                    HorizontalOptions="Center"/>
+
+                                <Label 
+                                    Grid.Column="2"
+                                    Text="{Binding Nombre}"
+                                    FontFamily="OpenSansRegular"
+                                    FontSize="15"
+                                    TextColor="{StaticResource Black}"
+                                    HorizontalOptions="StartAndExpand"
+                                    HorizontalTextAlignment="Center"/>
+
+                            </Grid>
+                        </StackLayout>
+                    </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Grid RowDefinitions="*,*" VerticalOptions="FillAndExpand" Padding="10" Grid.Column="1" ColumnDefinitions="*,*">
+        
+        <Grid 
+            Padding="10"
+            ColumnSpacing="-40"
+            Grid.Column="1">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            
             <SearchBar x:Name="SearchBarMedics"
-                       Style="{StaticResource NameSearchBar}"
+                       VerticalOptions="Start"
+                       Placeholder="Buscar Medico"
+                       Background="{StaticResource Alter1}"                    
                        SearchButtonPressed="SearchBarMedics_SearchButtonPressed"
                        TextChanged="SearchBarMedics_TextChanged"
                        Grid.Row="0"
-                       Grid.ColumnSpan="2"/>
-            <Button
-                Grid.Row="1"
-                Grid.Column="0"
-                HorizontalOptions="Center"
-                MinimumWidthRequest="150"
-                x:Name="btnCancel"
-                Clicked="btnCancel_Clicked"
-                Text="Volver"
-                VerticalOptions="End"/>
-            <Button
-                Grid.Column="1"
-                HorizontalOptions="Center"
-                MinimumWidthRequest="150"
-                Grid.Row="1"
-                x:Name="BtnAddMedic"
-                Clicked="BtnAddMedic_Clicked"
-                Text="Agregar"
-                VerticalOptions="End"/>
+                       MinimumWidthRequest="300"
+                       MaximumWidthRequest="300"
+                       MaximumHeightRequest="60"/>
+
+            <Image Grid.Row="1"
+                   Source="logo_hospital.png"
+                   VerticalOptions="Center"
+                   HorizontalOptions="Center"
+                   HeightRequest="200">
+                
+            </Image>
+
+            <Grid VerticalOptions="EndAndExpand"
+                  RowDefinitions="*,*"
+                  ColumnDefinitions="*,*"
+                  Grid.Row="2"
+                  ColumnSpacing="100"
+                  BackgroundColor="{StaticResource Secundario}">
+
+                <Button
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    HorizontalOptions="Start"
+                    MinimumWidthRequest="160"
+                    x:Name="btnCancel"
+                    Clicked="btnCancel_Clicked"
+                    Text="Volver"
+                    TextColor="{StaticResource Principal}"
+                    BackgroundColor="{StaticResource Alter1}">
+
+                    <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroupList>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="PointerOver">
+                                    <VisualState.Setters>
+                                        <Setter Property="BackgroundColor" Value="LightGray" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateGroupList>
+                    </VisualStateManager.VisualStateGroups>
+
+                </Button>
+
+
+                <Button
+                    Grid.Column="1"
+                    HorizontalOptions="End"
+                    MinimumWidthRequest="160"
+                    Grid.Row="1"
+                    x:Name="BtnAddMedic"
+                    Clicked="BtnAddMedic_Clicked"
+                    BackgroundColor="{StaticResource Alter1}"
+                    Text="Agregar Medico"
+                    TextColor="{StaticResource Principal}">
+
+                    <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroupList>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="PointerOver">
+                                    <VisualState.Setters>
+                                        <Setter Property="BackgroundColor" Value="LightGray" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateGroupList>
+                    </VisualStateManager.VisualStateGroups>
+
+                </Button>
+                
+            </Grid>
         </Grid>
     </Grid>
 </ContentPage>
