--- a/StareMedic/App.xaml
+++ b/StareMedic/App.xaml
@@ -3,8 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:StareMedic"
              x:Class="StareMedic.App">
+ 
     <Application.Resources>
+        
+               
         <ResourceDictionary>
+            
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
+                <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            
             <Style x:Key="BreakLine" TargetType="BoxView">
                 <Setter Property="Color" Value="Gray"/>
                 <Setter Property="HeightRequest" Value="1"/>
@@ -21,20 +30,19 @@
                 <Setter Property="VerticalOptions" Value="Center"/>
                 <Setter Property="HorizontalOptions" Value="Start"/>
             </Style>
-            
+
             <Style x:Key="labelEntry" TargetType="Label">
-                <Setter Property="VerticalOptions" Value="Center"/>
-                <Setter Property="TextColor" Value="#b0b0b0"/>
-                <Setter Property="FontSize" Value="Subtitle"/>
+                <Setter Property="TextColor" Value="#000"/>
+                <Setter Property="FontSize" Value="Title"/>
             </Style>
 
             <Style x:Key="entryName" TargetType="Entry">
                 <Setter Property="MinimumWidthRequest" Value="400"/>
-                <Setter Property="MaximumWidthRequest" Value="550"/>
-                <Setter Property="HeightRequest" Value="45"/>
-                <Setter Property="BackgroundColor" Value="#6f6f6f"/>
-                <Setter Property="FontSize" Value="Title"/>
-                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="MaximumWidthRequest" Value="1000"/>
+                <Setter Property="HeightRequest" Value="50"/>
+                <Setter Property="BackgroundColor" Value="#C3ACD0"/>
+                <Setter Property="FontSize" Value="Medium"/>
+                <Setter Property="TextColor" Value="#FFFBF5"/>
                 <Setter Property="TextTransform" Value="Uppercase"/>
             </Style>
 
@@ -67,10 +75,8 @@
 
             </Style>
 
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
-                <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
-            </ResourceDictionary.MergedDictionaries>
+            
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
